--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- HERO -->
   <section class="hero">
-    <div class="container container--hero">
+    <div class="container-hero">
       <h1><img class="hero__image" src="images/svg/hero.svg" alt="Japan Fiesta 2021"></h1>
 
       <div class="button-wrapper">
@@ -21,7 +21,7 @@
     </div>
   </section> <!-- END HERO -->
 
-  <div class="container display-none">
+  <div class="container">
 
     <!-- INTRO -->
     <section class="intro">
@@ -70,7 +70,7 @@
     </section> <!-- END INTRO -->
 
     <!-- STREAM -->
-    <section class="stream display-none">
+    <section class="stream">
       <h2 class="stream__title color-main">Day 2</h2>
       <p class="stream__sub color-secondary">Live Streaming</p>
       
@@ -92,7 +92,7 @@
     </section> <!-- END STREAM -->
 
     <!-- PERFORMER -->
-    <section class="performer display-none">
+    <section class="performer">
       <h3 class="performer__title color-secondary">Performers</h3>
       <p class="performer__sub color-secondary">
         <span class="color-main">Day 2</span> 
@@ -142,7 +142,7 @@
   </div>
 
   <!-- EXHIBITORS -->
-  <div class="exhibitors-councils-wrapper display-none">
+  <div class="exhibitors-councils-wrapper">
     <div class="container">
       <section class="exhibitors-councils">
         <h2 class="exhibitors-councils__title color-main">Exhibitors</h2>
@@ -305,7 +305,7 @@
   </div> <!-- END EXHIBITORS -->
 
   <!-- COUNCILIS -->
-  <div class="exhibitors-councils-wrapper display-none">
+  <div class="exhibitors-councils-wrapper">
     <div class="container">
       <section class="exhibitors-councils">
         <h2 class="exhibitors-councils__title councils__title color-main">Councils</h2>
@@ -334,13 +334,6 @@
 
           <li class="exhibitors-councils__company">
             <a href="">
-              <img class="exhibitors-councils__company__logo" src="images/png/pal.png" alt="">
-              <h4 class="exhibitors-councils__company__name color-secondary">Philippine Airlines</h4>
-            </a>
-          </li>
-
-          <li class="exhibitors-councils__company">
-            <a href="">
               <img class="exhibitors-councils__company__logo" src="images/png/commerce.png" alt="">
               <h4 class="exhibitors-councils__company__name color-secondary">The Japanese Chamber of Commerce and Industry of The Philippines, Inc.</h4>
             </a>
@@ -358,7 +351,7 @@
   </div>
 
   <!-- FOOTER -->
-  <div class="container display-none">
+  <div class="container">
 
     <section class="footer">
       <h2 class="footer__title color-main">Join Us</h2>
@@ -378,6 +371,5 @@
     </section>
 
   </div>
-
 </body>
 </html>
