top page - responsive

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     </div>
   </div> <!-- END EXHIBITORS -->
 
-  <!-- COUNCILIS -->
+  <!-- COUNCILS -->
   <div class="exhibitors-councils-wrapper">
     <div class="container">
       <section class="exhibitors-councils">
@@ -357,7 +357,7 @@
       <h2 class="footer__title color-main">Join Us</h2>
 
       <form class="footer__form">
-        <input class="footer__form__input" type="text" placeholder="Emai Address" required>
+        <input class="footer__form__input" type="email" placeholder="Email Address" required>
         <button class="button button--footer">Register Now</button>
       </form>
 
