--- a/exhibitors.html
+++ b/exhibitors.html
@@ -26,9 +26,9 @@
     <div class="container">
       <h2 class="exhibitors-page__title color-main">Exhibitors</h2>
 
-      <nav class="pagination-exhibitors">
-        <a class="pagination-exhibitors__page active" href="">Local Tourism Board & Private Companies</a>
-        <a class="pagination-exhibitors__page" href="">Airlines</a>
+      <nav class="pagination pagination--exhibitors">
+        <a class="pagination__page pagination__page--exhibitors active" href="">Local Tourism Board & Private Companies</a>
+        <a class="pagination__page pagination__page--exhibitors" href="">Airlines</a>
       </nav>
 
       <h3 class="exhibitors-page__sub color-secondary">Local Tourism Board & Private Companies</h3>
@@ -131,8 +131,14 @@
           <button class="button button--exhibitor__card">BROCHURE</button>
         </li>
       </ul>
+
+      <nav class="pagination pagination--exhibitors-page">
+        <a class="pagination__page pagination__page--exhibitors-page href=""></a>
+      </nav>
     </div>
-  </section>
+
+
+  </section> <!-- END EXHIBITORS -->
 
   <!-- COUNCILS -->
   <div class="exhibitors-councils-wrapper">
@@ -200,6 +206,6 @@
       <a href=""><img class="footer__icon" src="images/svg/fb.svg" alt=""></a>
     </section>
 
-  </div>
+  </div> <!-- END FOOTER -->
 </body>
 </html>
