--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
       </p>
 
       <!-- PAGINATION -->
-      <nav class="pagination">
-        <a class="pagination__page" href="">Day 1</a>
-        <a class="pagination__page active" href="">Day 2</a>
-        <a class="pagination__page" href="">Day 3</a>
-        <a class="pagination__page" href="">Day 4</a>
-        <a class="pagination__page" href="">Day 5</a>
-        <a class="pagination__page" href="">Day 6</a>
-        <a class="pagination__page" href="">Day 7</a>
+      <nav class="pagination pagination--performer">
+        <a class="pagination__page pagination__page--performer" href="">Day 1</a>
+        <a class="pagination__page pagination__page--performer active" href="">Day 2</a>
+        <a class="pagination__page pagination__page--performer" href="">Day 3</a>
+        <a class="pagination__page pagination__page--performer" href="">Day 4</a>
+        <a class="pagination__page pagination__page--performer" href="">Day 5</a>
+        <a class="pagination__page pagination__page--performer" href="">Day 6</a>
+        <a class="pagination__page pagination__page--performer" href="">Day 7</a>
       </nav> <!-- END PAGINATION -->
 
       <!-- STREAMERS -->
