responsive exhibitors page

--- a/exhibitors.html
+++ b/exhibitors.html
@@ -133,7 +133,17 @@
       </ul>
 
       <nav class="pagination pagination--exhibitors-page">
-        <a class="pagination__page pagination__page--exhibitors-page href=""></a>
+        <a class="pagination__page pagination__page--exhibitors-page dir" href="">
+          <img src="images/svg/prev.svg" alt="">
+        </a>
+
+        <a class="pagination__page pagination__page--exhibitors-page active" href="">1</a>
+        <a class="pagination__page pagination__page--exhibitors-page" href="">2</a>
+        <a class="pagination__page pagination__page--exhibitors-page" href="">3</a>
+
+        <a class="pagination__page pagination__page--exhibitors-page dir" href="">
+          <img src="images/svg/next.svg" alt="">
+        </a>
       </nav>
     </div>
 
